--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+    <div class="header">
+        <div>
+            <h1>My Library</h1>
+        </div>
+
+        <div><button>
+            Add Book
+        </button></div>
+    </div>
     
 </body>
 </html>
