Add transition to a text

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             Add Book
         </button></div>
     </div>
+    <div class="moving-not">
+        <p>Click the Add Book button to add your book to the collection !!</p>
+    </div>
     
 </body>
 </html>
