--- a/index.html
+++ b/index.html
@@ -20,6 +20,38 @@
     <div class="moving-not">
         <p>Click the Add Book button to add your book to the collection !!</p>
     </div>
+
+    <div>
+        <form action="#" method="get">
+            <fieldset>
+                <h1>Add a Book</h1>
+
+                <div class="pop-up">
+                    <div>
+                        <input type="text" name="name" id="author" placeholder="Author" required>
+                    </div>
+                    <div>
+                        <input type="text" name="title" id="title" placeholder="Title" required>
+                    </div>
+                    <div>
+                        <input type="text" name="pages" id="pages" placeholder="Pages" required>
+                    </div>
+                    
+                    <div class="dropdown">
+                        <label for="hasRead"> Status: </label>
+                        <select name="hasRead" id="status">
+                                <option value="Read">Read</option>
+                                <option value="Not Read">Not read</option>
+                        </select>
+                    </div>
+                    <div class="buton">
+                        <button type="button" class="btn">Add Book</button>
+                        <button class="btn">Cancel</button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
     
 </body>
 </html>
