Add the logic for the add book button

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <input
                 type="text"
                 name="name"
-                id="author"
-                placeholder="Author"
+                id="title"
+                placeholder="Title"
                 required
               />
             </div>
@@ -40,8 +40,8 @@
               <input
                 type="text"
                 name="title"
-                id="title"
-                placeholder="Title"
+                id="author"
+                placeholder="Author"
                 required
               />
             </div>
@@ -63,7 +63,7 @@
               </select>
             </div>
             <div class="buton">
-              <button type="button" class="btn">Add Book</button>
+              <button type="button" class="btn" id="addbtn">Add Book</button>
               <button class="btn cancel">Cancel</button>
             </div>
           </div>
@@ -71,6 +71,7 @@
       </form>
     </div>
 
+    <div class="container"></div>
 
     <script src="/JS/main.js"></script>
   </body>
