--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <div class="header">
-      <div>
-        <h1>My Library</h1>
+    
+      <div class="header">
+        <div>
+          <h1>My Library</h1>
+        </div>
+        <div>
+          <button class="addbtn">Add Book</button>
+        </div>
       </div>
 
-      <div>
-        <button class="addbtn">Add Book</button>
+      <div class="moving-not">
+        <p>Click the Add Book button to add book to the collection !!</p>
       </div>
-    </div>
-    <div class="moving-not">
-      <p>Click the Add Book button to add your book to the collection !!</p>
-    </div>
+    
 
     <div>
       <form action="#" method="get">
@@ -71,7 +73,9 @@
       </form>
     </div>
 
-    <div class="container"></div>
+    <div class="wrapper">
+      <div class="container"></div>
+    </div>
 
     <script src="/JS/main.js"></script>
   </body>
