--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
       <div class="container"></div>
     </div>
 
-    <script src="/JS/main.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
