--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./img/library-svgrepo-com.svg" />
     <title>My Library</title>
 
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
     
